# arrayify

./: dune-project  translator.opam
src/: boogie_ast.ml  boogie_driver.ml  boogie_lexer.mll  boogie_parser.mly  boogieir.ml  boogieir.mli  dune  executor.ml  executor.mli  global.ml  llvmutil.ml  llvmutil.mli  symbolicheap.ml  symbolicheap.mli  translator.ml  variable.ml  variable.mli
srkmin/: algebra.ml  cache.ml  cache.mli  dune  interpretation.ml  interpretation.mli  linear.ml  linear.mli  memo.ml  memo.mli  qQ.ml  qQ.mli  ring.ml  ring.mli  sparseMap.ml  sparseMap.mli  srkUtil.ml  srkZ3.ml  srkZ3.mli  syntax.ml  syntax.mli  zZ.ml  zZ.mli
test/: dune  test_parser.ml  test_stringtest.ml  test_symbolicheap.ml  test_translator.ml
test/files/: basic.c  comp.c  min.c  rotation.c
test/files/str-alg/: memchr_equal_strchr.c  memchr_equal_strchr.i  memchr_equal_strchr.yml  memcmp_asym.c  memcmp_asym.yml  memcmp_equal_strcmp.c  memcmp_equal_strcmp.yml  memcmp_equal_strncmp.c  memcmp_equal_strncmp.yml  memcmp_implies_memchr.c  memcmp_implies_memchr.yml  memcmp_longer_eq_implies_shorter_eq.c  memcmp_longer_eq_implies_shorter_eq.yml  memcmp_refl.c  memcmp_refl.yml  memcmp_shorter_neq_implies_longer_neq.c  memcmp_shorter_neq_implies_longer_neq.yml  memcmp_trans.c  memcmp_trans.yml  memcpy_branch_eq.c  memcpy_branch_eq.yml  memcpy_equal_strcpy.c  memcpy_equal_strcpy.yml  memcpy_equal_strncpy.c  memcpy_equal_strncpy.yml  memcpy_memset_commute.c  memcpy_memset_commute.yml  memcpy_preserves_memchr.c  memcpy_preserves_memchr.yml  memcpy_preserves_memcmp.c  memcpy_preserves_memcmp.yml  memcpy_trans.c  memcpy_trans.yml  memset_branch.c  memset_branch.yml  memset_memchr_1.c  memset_memchr_1.yml  memset_memchr_2.c  memset_memchr_2.yml  memset_overwrite.c  (+87 more)
test/files/str-alg-processed/: memrchr.c  strlen_benchmark.c
